# pali-exercises

./: .gitignore  CLAUDE.md  Makefile  README.org  download_resources.sh  grammar-glossary-ca.md  grammar-glossary-cs.md  grammar-glossary-de.md  grammar-glossary-en.md  grammar-glossary-es.md  grammar-glossary-fr.md  grammar-glossary-hu.md  grammar-glossary-it.md  grammar-glossary-pt.md  grammar-glossary-si.md  pyproject.toml  style.typ
docs/: anki-deck-generator.org
exercises/: noun-declensions-ca.typ  noun-declensions-cs.typ  noun-declensions-de.typ  noun-declensions-en.typ  noun-declensions-es.typ  noun-declensions-fr.typ  noun-declensions-hu.typ  noun-declensions-it.typ  noun-declensions-pt.typ  noun-declensions-si.typ  noun-declensions.typ  style.typ
exercises/archive/: noun-declensions-ca.typ
resources/grammar/: PaliPrimerAnswersFree.txt  anandajoti_guide.html  anandajoti_new_sentences_navapadamanjari.txt  bomhard_intro_grammar.txt  conjugation_of_verbs.html  declension_of_nouns.html  duroiselle_ch05.html  duroiselle_ch06.html  duroiselle_ch10.html  pali-lessons-answerkey.txt  pali_primer_guide.txt  wiktionary_pali_declension.html
scripts/: build.sh
src/anki_generator/: __init__.py  anki_client.py  cli.py  models.py  parser.py  typst_markup.py
tasks/: tasks-prd-anki-deck-generator.md
tasks/archive/: prd-anki-deck-generator.md  tasks-prd-anki-deck-generator.md
tests/: conftest.py
tests/data/: exercises-to-anki.typ  expected-parse-result.json
tests/integration/: test_anki_integration.py
tests/unit/: test_parser.py  test_snapshot.py  (+1 more)
(+32 files in other folders)
